# miner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docmake.bat
.github/workflows/: cmake.yml
d1srcmac/2d/: gr.c
d1srcpc/2d/: bitmap.c  canvas.c  effects.c  inv_cmap.c  l.c  median.c  modex.asm  palette.c  rle.c  roller.c  scale.c  temp.asm  vesalib.c
d1srcpc/2d/mac/: scale.c
d1srcpc/bios/: cdrom.c  demo.c  dpmi.c  ipx.h  joy.asm  joy.h  joyc.c  key1.asm  key2.asm  l.asm  l.c  mono.c  mouse.c  mousec.c  newkey.c  oldkey.asm  swiftcfg.h  t1.c  testk.c  testms.c  testt.c  timer.h  treset.asm
d1srcpc/bios/csstuff/: joy.asm  joy.h  joyc.c  timer.asm
d1srcpc/cfile/: cfile.c  cfile.h  l.c  pscomp.c
d1srcpc/div/: div0.asm
d1srcpc/iff/: iff.c
d1srcpc/lbmcomp/: lbmcomp.c  makefile
d1srcpc/lib/: cflib.h  dpmi.h  effects.h  gameseg.h  gameseq.h  gr.h  joycal.h  key.h  laser.h  mcockpit.h  mouse.h  nfile.h  radar.h  rle.h  spx.h  vecmat.h  weapon.h
d1srcpc/main/: ai.c  automap.c  bm.c  cdrom.c  cockpit.asm  coindev.c  collide.c  config.c  digi.c  digicomp.c  effects.h  fvi.c  g.c  gamemine.c  gameseq.c  garage.c  gauges.c  gauges.h  hostage.c  ipx_esr.asm  joycal.c  kfuncs.c  l.h  med.c  medmisc.c  modem.c  modem.h  morph.c  multibot.c  newmenu.c  nfile.c  objphys.c  ourcom.c  p.c  photos.c  physics.c  polyobj.c  powerup.c  powerup.h  radar.c  (+16 more)
d1srcpc/main/editor/: autosave.c  dcflib.h  ehostage.c  info.c  kfuncs.c  kgame.c  kmine.c  ksegsize.c  l.c  l2.c  macro.c  med.c  medsel.h
d1srcpc/pcxview/: pcx.c
d1srcpc/pslib/: library.h  lzw.c  makefile
d1srcpc/texmap/: john.asm  john1.asm  makefile  quad.c  scanline.c  selector.asm  temp.asm  tmap_flt.asm  tmap_inc.asm  tmap_lin.asm  tmap_ll.asm  tmapdith.asm  tmapflat.c
d1srcpc/texmap/mesh/: ntmap.c
d1srcpc/ui/: barbox.c  checkbox.c  file.c  menu.c  menubar1.c  number.c  popup.c  radio.c  scroll.c  testg.c  ui.c  ui1.h
d1srcpc/xcolor/: xcolor.c
d2srcpc/source/3d/: trakball.c  upvecs2.c
d2srcpc/source/cfile/: makefile
d2srcpc/source/fix/: asingen.c  fixtest.c  singen.c
d2srcpc/source/iff/archive/: iff15bpp.c  iff8bpp.c
d2srcpc/source/includes/: test.c
d2srcpc/source/main/: newmodel.c
d2srcpc/source/misc/: errtest.c  parstest.c
d2srcpc/source/ui/: keytrap.c
d2srcpc/source/vga/: framebuf.jas  vga.jas
extlib/sos/: sosdata.h  sosdefs.h  sosres.h
init/: dedit.ini  dsat.ini  dsatsg.ini  makefile.def
source/: CMakeLists.txt  d1vars.bat  d1vars.sh  makefile
source/2d/: CMakeLists.txt  bitblt.c  bitmap.c  canvas.c  fdraw.c  font.c  gpixel.c  gr.c  gr.h  grdef.h  ibitblt.c  line.c  linear.asm  makefile  pcx.c  pixel.c  rle.c  scale.c  scalea.asm  scanline.c  testg.c  vesa.asm  vesatest.c
source/3d/: 3d.h  CMakeLists.txt  interp.asm  makefile  rod.asm
source/bios/: CMakeLists.txt  demo.c  dpmi.c  findfile.h  ipx.c  key.c  key.h  makefile  mono.h  mouse.c  mouse.h  testj.c  testm.c  testmem.c  testms.c  timer.asm  timer.h
source/cfile/: CMakeLists.txt  cfile.c  makefile  nocfile.h  t.c
source/div/: CMakeLists.txt  div0.h  makefile
source/fix/: CMakeLists.txt  fix.h  fixc.c  fixtest.c  makefile
source/hogfile/: CMakeLists.txt  hogfile.c  makefile
source/iff/: CMakeLists.txt  iff.c  makefile
source/includes/: CMakeLists.txt  makefile  types.h
source/lbmcomp/: CMakeLists.txt  lbmcomp.c  makefile
source/main/: CMakeLists.txt  ai.c  aipath.c  args.c  automap.c  bmread.c  cntrlcen.c  collide.c  config.c  credits.c  d4rent.ini  digi.c  digi.h  dreg.ini  drock.ini  dsat.ini  dsatsg.ini  dsatsgup.ini  dsatup.ini  dumpmine.c  effects.c  endlevel.c  endlevel.h  findtext.c  fireball.c  fuelcen.c  fvi.c  fvi.h  game.c  game.h  gamemine.c  gamesave.c  gamesave.h  gameseg.c  gameseq.c  gameseq.h  gauges.c  hash.c  hostage.c  iglasses.c  (+49 more)
source/main/editor/: CMakeLists.txt  autosave.c  curves.c  ehostage.h  elight.c  eobject.c  eswitch.c  eswitch.h  func.c  group.c  info.c  kbuild.c  kdefs.h  makefile  med.c  medmisc.c  medrobot.c  medsel.c  medwall.c  objpage.c  segment.c  seguvs.c  texpage.c
source/mem/: CMakeLists.txt  makefile  mem.c
source/misc/: CMakeLists.txt  byteswap.c  byteswap.h  error.c  error.h  fileutil.c  fileutil.h  makefile  misc.c  misc.h  parsarg.c  profiler.h  strutil.c  strutil.h
source/pal/: CMakeLists.txt  iff.c  iff15bpp.c  makefile  testp.c
source/pslib/: CMakeLists.txt  bitio.c  cflib.h  library.c  library.h  lzw.c  makefile  pslib.c
source/texmap/: CMakeLists.txt  makefile  ntmap.c  scanline.c  texmap.h  texmapl.h  tmap_fl1.asm  tmap_lin.asm  tmapfade.asm  tmapflat.c
source/ui/: CMakeLists.txt  button.c  file.c  icon.c  keypad.c  keypress.c  keytrap.c  makefile  message.c  mouse.c  testg.c  ui.h  uidraw.c  userbox.c  window.c
source/unix/: CMakeLists.txt  mono.c
source/vecmat/: CMakeLists.txt  makefile  vecmatc.c
source/vga/: CMakeLists.txt  makefile  modex.asm  vesa.asm  vga.c
source/xcolor/: CMakeLists.txt  makefile  xcolor.c
